Replace postgis action with testcontainers